--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "browser": {
     "./sfc": "src/components/Cryflow.vue"
   },
+  "license": "MIT",
   "files": [
     "dist/*",
     "src/*",
@@ -21,10 +22,34 @@
     "build": "npm run build:unpkg & npm run build:es & npm run build:umd",
     "build:umd": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format umd --file dist/cryflow.umd.js",
     "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es --file dist/cryflow.esm.js",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --file dist/cryflow.min.js"
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --file dist/cryflow.min.js",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+    },
+    "snapshotSerializers": [
+      "jest-serializer-vue"
+    ]
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^25.1.0",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
+    "jest": "^25.1.0",
+    "jest-serializer-vue": "^2.0.2",
     "minimist": "^1.2.0",
     "rollup": "^1.14.4",
     "rollup-plugin-buble": "^0.19.6",
@@ -33,6 +58,7 @@
     "rollup-plugin-uglify-es": "0.0.1",
     "rollup-plugin-vue": "^4.7.2",
     "vue": "^2.6.10",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.10"
   }
 }
